tests/snapshots/file@call@object.lox.snap
---
source: tests/common/mod.rs
description: "class Foo {}\n\nvar foo = Foo();\nfoo(); // expect runtime error: Can only call functions and classes.\n"
input_file: crafting_interpreters_test_files/call/object.lox
---
OUT: 

===
ERR: 
  × Static errors

Error:   × expected one of the following: 'number, (, -, !, string, ident, nil, true, false', found 'class'
   ╭─[1:1]
 1 │ class Foo {}
   · ──┬──
   ·   ╰── here
 2 │ 
   ╰────
